k8s-deployments/userservice/userservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  ports:
    - port: 80
  selector:
    app: userservice
    tier: backend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  selector:
    matchLabels:
      app: userservice
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userservice
        tier: backend
    spec:
      containers:
        - image: sahaturjoy/userservice:v1
          name: userservice
          ports:
            - containerPort: 80
              name: userservice
